# pod-discover

./: .gitignore  README.md  TESTING.md  pyproject.toml
docs/plans/: 2026-02-11-recommendation-algorithm-design.md
src/pod_discover/: api.py  background_tasks.py  config.py  db.py  models.py  podcast_index.py  recommender.py  reddit_parser.py  scoring.py  server.py
tests/: test_config.py  test_db.py  test_podcast_index.py  test_recommender.py  test_reddit_parser.py  test_scoring.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  api.js
web/src/components/: EpisodeCard.jsx  SearchBar.jsx
